# genogrove-cli

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: sync-version.yml
include/: bed_reader.hpp  file_entry.hpp  file_reader.hpp  file_reader_factory.hpp  filetype_detector.hpp  utility.hpp
include/subcall/: index.hpp  subcall.hpp
include/subcalls/: index.hpp  intersect.hpp  subcall.hpp
src/: bed_reader.cpp  file_reader_factory.cpp  filetype_detector.cpp  index.cpp  intersect.cpp  main.cpp  utility.cpp
